syntax = "proto3";

package blockjoy.api.v1;

import "messages.proto";
import "node_types.proto";

message NodeInfo {
    Uuid node_id = 1;
    string name = 2;
    string ip = 3;
    int64 block_height = 6;
    string onchain_name = 7;
    NodeType node_type = 8;
}

message ContainerImage {
    string url = 1;
}

message NodeStart {}

message NodeStop {}

message NodeRestart {}

message NodeUpgrade {
    ContainerImage image = 1;
}

message NodeInfoUpdate {
    optional string name = 1;
}

message NodeInfoGet {}

message NodeGenericCommand {
    repeated Parameter params = 1;
}

message NodeCreate {
    string name = 1;
    ContainerImage image = 2;
}

message NodeDelete {}

message NodeCommand {
    Uuid node_id = 1;
    CommandMeta meta = 2;

    oneof command {
        NodeStart start = 3;
        NodeStop stop = 4;
        NodeRestart restart = 5;
        NodeUpgrade upgrade = 6;
        NodeInfoUpdate update = 7;
        NodeInfoGet info_get = 8;
        NodeGenericCommand generic = 9;
        NodeCreate create = 10;
        NodeDelete delete = 11;
    };
}
